--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,9 @@ transform:translatey(0);
 -webkit-transition-delay:.2s;
 transition-delay:.2s;
 }
+li.list-group-item{
+     background-color: transparent;
+}
+ul{
+     padding-right: 3em;
+}
